--- a/css/impress-demo.css
+++ b/css/impress-demo.css
@@ -28,19 +28,7 @@
     doesn't do any harm and gives us a fresh start.
 */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+html, body, div {
     margin: 0;
     padding: 0;
     border: 0;
@@ -215,9 +203,9 @@ a:focus {
     font-variant: small-caps;
 }
 
-#intro svg {
-    width: 100px;
-    height: 100px;
+#communication-app img {
+    width: 200px;
+    height: 200px;
 }
 
 /*
