--- a/css/impress-demo.css
+++ b/css/impress-demo.css
@@ -19,49 +19,6 @@
     Shall we begin?
 */
 
-
-/*
-    We start with a good ol' reset.
-    That's the one by Eric Meyer http://meyerweb.com/eric/tools/css/reset/
-
-    You can probably argue if it is needed here, or not, but for sure it
-    doesn't do any harm and gives us a fresh start.
-*/
-
-html, body, div {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
-}
-
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-    display: block;
-}
-body {
-    line-height: 1;
-}
-ol, ul {
-    list-style: none;
-}
-blockquote, q {
-    quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-    content: '';
-    content: none;
-}
-
-table {
-    border-collapse: collapse;
-    border-spacing: 0;
-}
-
 /*
     Now here is when interesting things start to appear.
 
@@ -81,36 +38,6 @@ body {
     background:      -o-radial-gradient(rgb(240, 240, 240), rgb(190, 190, 190));
     background:         radial-gradient(rgb(240, 240, 240), rgb(190, 190, 190));
 }
-
-/*
-    Now let's bring some text styles back ...
-*/
-b, strong { font-weight: bold }
-i, em { font-style: italic }
-
-/*
-    ... and give links a nice look.
-*/
-/*a {
-    color: inherit;
-    text-decoration: none;
-    padding: 0 0.1em;
-    background: rgba(255,255,255,0.5);
-    text-shadow: -1px -1px 2px rgba(100,100,100,0.9);
-    border-radius: 0.2em;
-
-    -webkit-transition: 0.5s;
-    -moz-transition:    0.5s;
-    -ms-transition:     0.5s;
-    -o-transition:      0.5s;
-    transition:         0.5s;
-}
-
-a:hover,
-a:focus {
-    background: rgba(255,255,255,1);
-    text-shadow: -1px -1px 2px rgba(100,100,100,0.5);
-}*/
 
 /*
     Because the main point behind the impress.js demo is to demo impress.js
@@ -168,6 +95,17 @@ a:focus {
     line-height: 1.5;
 }
 
+.step h1 {
+    font-size: 1.5em;
+}
+.step h2 {
+    font-size: 1.3em;
+}
+.step h3 {
+    font-size: 1.1em;
+    font-weight: bold;
+}
+
 /*
     ... and we enhance the styles for impress.js.
 
@@ -203,7 +141,7 @@ a:focus {
     font-variant: small-caps;
 }
 
-#communication-app img {
+.step img.heading-icon {
     width: 200px;
     height: 200px;
 }
