--- a/css/impress-demo.css
+++ b/css/impress-demo.css
@@ -165,6 +165,7 @@ body {
 
 blockquote {
     border-color: rgb(51, 51, 51);
+    text-align: left;
 }
 blockquote, blockquote p {
     font-size: inherit;
